@@ -18,18 +18,6 @@ structs = SwigParser.run(SwigExtract.parse(ARGV[0]))
 xlib = structs.delete('Xlib')
 puts SwigGenerate.dofile('Xlib', xlib, funcs, true)
 
-# remove just enough to get syx up
-structs.delete('XColor')
-structs.delete('XErrorEvent')
-structs.delete('XIMPreeditCaretCallbackStruct')
-structs.delete('XIMHotKeyTriggers')
-structs.delete('XUnmapEvent')
-structs.delete('XReparentEvent')
-structs.delete('XExposeEvent')
-structs.delete('XMapEvent')
-structs.delete('XIMHotKeyTrigger')
-structs.delete('XIMStyles')
-
 structs.keys.each do |k|
     puts SwigGenerate.dofile(k, structs[k], funcs)
 end
