@@ -1,3 +1,7 @@
+2007-12-24  Luca Bruno  <lethalman88@gmail.com>
+
+	* syx/syx-object.c (syx_dictionary_rehash): missing check
+
 2007-12-23  Luca Bruno  <lethalman88@gmail.com>
 
 	* plugins/x11/st/Wm.st: removed
